--- a/css/my.css
+++ b/css/my.css
@@ -79,7 +79,7 @@ body {
   .timeline {
     text-align: center;
   }
-  .timeline .year {
+  .timeline .header {
     display: inline-block;
     font-size: 28px;
     font-weight: bold;
@@ -87,11 +87,11 @@ body {
     position: relative;
     
   }
-  .timeline .year span {
+  .timeline .header span {
     display: inline-block;
     padding-bottom: 10px;
   }
-  .timeline .year:after {
+  .timeline .header:after {
     content: "";
     display: block;
     width: 90%;
@@ -99,7 +99,7 @@ body {
     height: 2px;
     background: #008fc6;
   }
-  .timeline .year--end:before {
+  .timeline .header--end:before {
     content: "";
     display: block;
     width: 80%;
@@ -107,19 +107,19 @@ body {
     height: 1px;
     background: #008fc6;
   }
-  .timeline .year--end:after {
+  .timeline .header--end:after {
     content: none;
   }
-  .timeline .days {
+  .timeline .years {
     list-style-type: none;
     margin: 0;
     padding: 0;
   }
-  .timeline .days .day {
+  .timeline .years .description {
     width: 100%;
     float: left;
   }
-  .timeline .days .day .events {
+  .timeline .years .description .events {
     position: relative;
     float: left;
     border-right: 1px solid #008fc6;
@@ -127,7 +127,7 @@ body {
     text-align: right;
     width: 50%;
   }
-  .timeline .days .day .events:after {
+  .timeline .years .description .events:after {
     content: "";
     width: 40%;
     display: inline-block;
@@ -136,7 +136,7 @@ body {
     position: absolute;
     right: 0;
   }
-  .timeline .days .day .events .date {
+  .timeline .years .description .events .date {
     position: absolute;
     top: 50%;
     left: 100%;
@@ -147,16 +147,16 @@ body {
     font-size: 24px;
     white-space: nowrap;
   }
-  .timeline .days .day .events .day__img {
+  .timeline .years .description .events .event__img {
     margin-right: -30px;
     position: relative;
     overflow: hidden;
   }
-  .timeline .days .day .events .day__img img {
+  .timeline .years .description .events .event__img img {
     display: block;
     float: right;
   }
-  .timeline .days .day .events .day__img .caption {
+  .timeline .years .description .events .event__img .caption {
     position: absolute;
     margin: 0;
     bottom: 0;
@@ -166,30 +166,30 @@ body {
     background: rgba(0, 0, 0, 0.7);
     color: #fff;
   }
-  .timeline .days .day:nth-child(odd) .events {
+  .timeline .years .description:nth-child(odd) .events {
     width: calc(50% + 1px);
     float: right;
     border-right: 0;
     border-left: 1px solid #008fc6;
     text-align: left;
   }
-  .timeline .days .day:nth-child(odd) .events:after {
+  .timeline .years .description:nth-child(odd) .events:after {
     right: auto;
     left: 0;
   }
-  .timeline .days .day:nth-child(odd) .events .date {
+  .timeline .years .description:nth-child(odd) .events .date {
     left: auto;
     right: 100%;
     text-align: right;
   }
-  .timeline .days .day:nth-child(odd) .events .day__img {
+  .timeline .years .description:nth-child(odd) .events .event__img {
     margin-right: auto;
     margin-left: -30px;
   }
-  .timeline .days .day:nth-child(odd) .events .day__img img {
+  .timeline .years .dadescriptiony:nth-child(odd) .events .event__img img {
     float: left;
   }
-  .timeline .days .day:nth-child(odd) .events .day__img .caption {
+  .timeline .years .description:nth-child(odd) .events .event__img .caption {
     right: auto;
     left: 0;
   }
